--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   
-        <link rel="stylesheet" href="swiggy.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <img src="https://tse4.mm.bing.net/th?id=OIP.4s6CVVrPDaVSh_XK16d_PQHaE8&pid=Api&P=0" alt=" " align="right" class="img">
