--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <p class="k1">POPULAR CITIES IN INDIA</p>
               <p class="v1">Ahmedabad</p><p class="v2">&nbsp;&nbsp;Bangalore</p><p class="v3">&nbsp;&nbsp;Chennai</p><p class="v2">&nbsp;&nbsp;Delhi</p>
               <p class="v3">&nbsp;&nbsp;Gurgaon</p><p class="v2">&nbsp;&nbsp;Hyderabad</p><p class="v3">&nbsp;&nbsp;Kolkata</p>
-              <p class="v2">&nbsp;&nbsp;Mumbai</p><br><p class="v1">Pune</p><p class="v2">&more</p><br><br><br>
+              <p class="v2">&nbsp;&nbsp;Mumbai</p><br><p class="v1">Pune</p><p class="v2">&more</p><br><br><br><br><br><br>
           
 
 
